--- a/angularapp/src/app/registration/registration.component.html
+++ b/angularapp/src/app/registration/registration.component.html
@@ -1,4 +1,5 @@
 <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" novalidate>
+  <h4>Register</h4>
   <!-- Username -->
   <div>
     <label for="username">Username:</label>
