--- a/angularapp/src/app/usernavbar/usernavbar.component.html
+++ b/angularapp/src/app/usernavbar/usernavbar.component.html
@@ -2,11 +2,11 @@
 <body>
     <header>
         <div class="navbar">
-            <h1>FoodMart</h1>
+            <h1>Vehicle Service</h1>
             <div class="admin-section">
                 <nav>
                     <ul>
-                        <li>{{userName}}/{{userRole}}</li>
+                        <!-- <li>{{userName}}/{{userRole}}</li> -->
                         <li><a href="#">Home</a></li>
                         <li class="hover-card">
                             <a>Appointments</a>
@@ -29,8 +29,6 @@
         </div>
     </header>
     
-    <footer>
-     
-    </footer>
- 
 </body>
+
+<router-outlet></router-outlet>
