--- a/angularapp/src/app/login/login.component.html
+++ b/angularapp/src/app/login/login.component.html
@@ -1,7 +1,6 @@
-<h2>Login Page</h2>
-
 <div class="login-container">
   <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+    <h4>Login</h4><br><br>
     <label for="username">Username:</label>
     <input
       type="text"
