--- a/angularapp/src/app/adminaddservice/adminaddservice.component.html
+++ b/angularapp/src/app/adminaddservice/adminaddservice.component.html
@@ -37,6 +37,6 @@
 </div>
 
 <div *ngIf="showPopup" class="popup">
-  <p>{{ id ? 'Service Updated Successfully' : 'Service Added Successfully' }}</p>
+  <p>{{ serviceId ? 'Service Updated Successfully' : 'Service Added Successfully' }}</p>
   <button (click)="closePopup()">Ok</button>
 </div>
