--- a/angularapp/src/app/login/login.component.html
+++ b/angularapp/src/app/login/login.component.html
@@ -17,3 +17,6 @@
   
     <button type="submit" [disabled]="loginForm.invalid">Login</button>
   </form>
+  <div class="background">
+    <h1>Welcome to My Angular App</h1>
+    </div>
