--- a/angularapp/src/app/navbar/navbar.component.html
+++ b/angularapp/src/app/navbar/navbar.component.html
@@ -1,12 +1,10 @@
- <nav class="navbar">
-
-    <h2 class="navbar-title">Vehicle Service</h2>
-
+<nav class="navbar">
+      <h2 class="navbar-title">Vehicle Service</h2>
+      <div class="navbar-links">
           <a class="navbar-link" routerLink="/home">Home</a>
           <a class="navbar-link" routerLink="/registration">Register</a>
           <a class="navbar-link" routerLink="/login">Login</a>
-
+      </div>
   </nav>
- 
-   
- 
+  <router-outlet></router-outlet>
+  
